--- a/src/main/resources/templates/registry-office/index.html
+++ b/src/main/resources/templates/registry-office/index.html
@@ -9,12 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>:: Sistema de Cartórios ::</title>
+
+    <style type="text/css">
+        a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body style="margin: 10px; background-color: #9272D6;">
     <div style="padding: 10px; background-color: #FFFFFF;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #9272D6; color: #ffffff;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="/">
                     <img width="75" height="50" src="https://docket.com.br/img/thumb/thumb-300x200.png">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,8 +62,12 @@
                     <td th:text="${registryOffice.name}"></td>
                     <td th:text="${registryOffice.address}"></td>
                     <td>
-                        <a href="">Editar</a>
-                        <a href="">Excluir</a>
+                        <a href="">
+                            <button class="btn btn-info" type="button">Editar</button>
+                        </a>
+                        <a href="">
+                            <button class="btn btn-danger" type="button">Excluir</button>
+                        </a>
                     </td>
                 </tr>
                 </tbody>
@@ -67,7 +77,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="newRegistryOfficeLabel">Modal title</h5>
+                            <h5 class="modal-title" id="newRegistryOfficeLabel">Novo Cartório</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
@@ -84,13 +94,11 @@
                                     <label for="address">Endereço</label>
                                     <input type="text" class="form-control" id="address" placeholder="Endereço">
                                 </div>
-                                <div class="form-row">
-                                    <button type="submit" class="btn btn-primary">Salvar</button>
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                                </div>
                             </form>
                         </div>
                         <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">Salvar</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                         </div>
                     </div>
                 </div>
