- Implementado novo cartório - Ajustes HTML - Criada Modal para excluir cartório

--- a/src/main/resources/templates/registry-office/about.html
+++ b/src/main/resources/templates/registry-office/about.html
@@ -10,7 +10,7 @@
 
     <title>Sobre</title>
 </head>
-<body style="margin: 10px; background-color: #9272D6; text-align: center;">
+<body style="margin: 10px; background-color: #9272D6;">
     <div style="padding: 10px; background-color: #FFFFFF;">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #9272D6; color: #ffffff;">
             <div class="container-fluid">
@@ -41,12 +41,13 @@
         </nav>
         <div class="card">
             <div class="card-header">
-                Agradecimentos
+                Tecnologias utilizadas
             </div>
             <div class="card-body">
-                <p>Agradeço ao time da Docket pela oportunidade de realizar este teste!</p>
-                <p>Foi um desafio muito enriquerecedor, visto que é o meu primeiro contato com o Java e seus recursos!</p>
-                <p>Muito obrigado e até a próxima!</p>
+                <p class="list-group-item">Java 8 (ou superior) ✔️</p>
+                <p class="list-group-item">Spring Boot ✔️ </p>
+                <p class="list-group-item">Thymeleaf HTML ✔️</p>
+                <p class="list-group-item">Banco de dados H2DB ✔️</p>
                 <a href="/" class="btn btn-primary">Voltar</a>
             </div>
         </div>
