--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,35 +11,49 @@
     <title>:: Sistema de Cartórios ::</title>
 </head>
     <body style="margin: 10px; background-color: #9272D6;">
-    <div style="padding: 10px; background-color: #FFFFFF;">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #9272D6; color: #ffffff;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">
-                    <img width="75" height="50" src="https://docket.com.br/img/thumb/thumb-300x200.png">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/registry-office/index">Cartórios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/registry-office/about">Sobre</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                        <button class="btn btn-primary" type="submit">Pesquisar</button>
-                    </form>
+        <div style="padding: 10px; background-color: #FFFFFF; text-align: center;">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #9272D6; color: #ffffff;">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/">
+                        <img width="75" height="50" src="https://docket.com.br/img/thumb/thumb-300x200.png">
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/registry-office/index">Cartórios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/registry-office/about">Sobre</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+                            <button class="btn btn-primary" type="submit">Pesquisar</button>
+                        </form>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="card">
+                <div class="card-header">
+                    Agradecimentos
+                </div>
+                <div class="card-body">
+                    <p>Agradeço ao time da Docket pela oportunidade de realizar este teste!</p>
+                    <p>Foi um desafio muito enriquerecedor, visto que é o meu primeiro contato com o Java e seus recursos!</p>
+                    <p>Muito obrigado e até a próxima!</p>
                 </div>
             </div>
-        </nav>
-    </div>
+            <div style="color: #FFFFFF;">
+                <p>Gustavo Faria Ramos - 2022</p>
+            </div>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
