--- a/src/main/resources/templates/registry-office/index.html
+++ b/src/main/resources/templates/registry-office/index.html
@@ -46,7 +46,9 @@
             </div>
         </nav>
         <div style="margin-top: 10px;">
-            <button class="btn btn-primary" type="button" data-toggle="modal" data-target="#newRegistryOffice">Novo</button>
+            <a href="/registry-office/new-registry-office">
+                <button class="btn btn-primary" type="button">Novo</button>
+            </a>
             <table class="table table-hover">
                 <thead>
                 <tr>
@@ -65,39 +67,28 @@
                         <a href="">
                             <button class="btn btn-info" type="button">Editar</button>
                         </a>
-                        <a href="">
-                            <button class="btn btn-danger" type="button">Excluir</button>
-                        </a>
+                        <button class="btn btn-danger" type="button" data-toggle="modal" data-target="#deleteRegistryOffice">
+                            Excluir
+                        </button>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <!-- Modal - Novo Cartório -->
-            <div class="modal fade" id="newRegistryOffice" tabindex="-1" role="dialog" aria-labelledby="newRegistryOfficeLabel" aria-hidden="true">
+            <!-- Modal - Excluir Cartório -->
+            <div class="modal fade" id="deleteRegistryOffice" tabindex="-1" role="dialog" aria-labelledby="deleteRegistryOfficeLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="newRegistryOfficeLabel">Novo Cartório</h5>
+                            <h5 class="modal-title" id="deleteRegistryOfficeLabel">Excluir Cartório</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <form action="/registry-office/store" method="post">
-                                <div class="form-row">
-                                    <div class="form-group col-md-6">
-                                        <label for="name">Nome</label>
-                                        <input type="text" class="form-control" id="name" placeholder="Nome">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="address">Endereço</label>
-                                    <input type="text" class="form-control" id="address" placeholder="Endereço">
-                                </div>
-                            </form>
+                            <p>Tem certeza que deseja excluir este registro?</p>
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Salvar</button>
+                            <button type="submit" class="btn btn-primary">Confirmar</button>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                         </div>
                     </div>
