--- a/src/main/resources/templates/registry-office/index.html
+++ b/src/main/resources/templates/registry-office/index.html
@@ -64,7 +64,7 @@
                     <td th:text="${registryOffice.name}"></td>
                     <td th:text="${registryOffice.address}"></td>
                     <td>
-                        <a href="">
+                        <a th:href="@{/registry-office/edit/} + ${registryOffice.id}">
                             <button class="btn btn-info" type="button">Editar</button>
                         </a>
                         <button th:id="${registryOffice.id}"
@@ -72,7 +72,7 @@
                                 type="submit"
                                 data-toggle="modal"
                                 data-target="#deleteRegistryOffice"
-                                onclick="document.getElementById()"
+                                onclick="confirmRegistryOfficeDelete(this.id)"
                         >
                             Excluir
                         </button>
@@ -94,7 +94,7 @@
                             <p>Tem certeza que deseja excluir este registro?</p>
                         </div>
                         <div class="modal-footer">
-                            <form id="1" action="/registry-office/delete/ + this.id" th:method="delete">
+                            <form id="confirmRegistryOfficeDelete" action="/registry-office/delete/{registryOfficeIdToDelete}" th:method="delete">
                                 <button type="submit" class="btn btn-primary">Confirmar</button>
                             </form>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
@@ -104,9 +104,17 @@
             </div>
         </div>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script>
+        function confirmRegistryOfficeDelete(registryOfficeId) {
+            const form = document.getElementById('confirmRegistryOfficeDelete');
+            let formAction = '/registry-office/delete/' + registryOfficeId;
+
+            form.action = formAction;
+        }
+    </script>
 </body>
 </html>
