- Criação de Entity + Dto para Certidões - Criado CertificateService - Implementar checagem para salvar novas certidões, caso forem encontradas via response da Docket

--- a/src/main/resources/templates/registry-office/index.html
+++ b/src/main/resources/templates/registry-office/index.html
@@ -49,7 +49,7 @@
             <div class="spinner-grow text-primary" role="status">
                 <span class="visually-hidden">Loading...</span>
             </div>
-            <span>Carregando certidões...</span>
+            <span>Carregando certidões... Por favor aguarde...</span>
         </div>
         <div style="margin-top: 10px;">
             <a href="/registry-office/new-registry-office">
