- Add mecanismo para salvar certidões trazidas da API - Ajustes para exibir certidões nos cadastros (novo/editar) - Ajustes gerais HTML

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="card-body">
                     <p>Agradeço ao time da Docket pela oportunidade de realizar este teste!</p>
-                    <p>Foi um desafio muito enriquerecedor, visto que é o meu primeiro contato com o Java e seus recursos!</p>
+                    <p>Foi um desafio muito enriquerecedor, visto que é o meu primeiro contato com o Java e seus recursos...</p>
                     <p>Muito obrigado e até a próxima!</p>
                 </div>
             </div>
