--- a/src/main/resources/templates/registry-office/about.html
+++ b/src/main/resources/templates/registry-office/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -12,33 +12,7 @@
 </head>
 <body style="margin: 10px; background-color: #9272D6;">
     <div style="padding: 10px; background-color: #FFFFFF;">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #9272D6; color: #ffffff;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">
-                    <img width="75" height="50" src="https://docket.com.br/img/thumb/thumb-300x200.png">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/registry-office/index">Cartórios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/registry-office/about">Sobre</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                        <button class="btn btn-primary" type="submit">Pesquisar</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
+        <div th:replace="/registry-office/header"></div>
         <div class="card">
             <div class="card-header">
                 Tecnologias utilizadas
