--- a/src/main/resources/templates/registry-office/index.html
+++ b/src/main/resources/templates/registry-office/index.html
@@ -9,132 +9,90 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>:: Sistema de Cartórios ::</title>
-
-    <style type="text/css">
-        a {
-            text-decoration: none;
-        }
-    </style>
 </head>
 <body style="margin: 10px; background-color: #9272D6;">
-    <div style="padding: 10px; background-color: #FFFFFF;">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #9272D6; color: #ffffff;">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">
-                    <img width="75" height="50" src="https://docket.com.br/img/thumb/thumb-300x200.png">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/registry-office/index">Cartórios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/registry-office/about">Sobre</a>
-                        </li>
-                    </ul>
-                    <form th:action="@{/registry-office/index}" method="get" class="d-flex">
-                        <input
-                                type="text"
-                                name="registryOfficeName"
-                                class="form-control me-2"
-                                placeholder="Nome do cartório"
-                                aria-label="Nome do cartório"
-                                onfocus="this.placeholder = ''"
-                                onblur="this.placeholder = 'Nome do cartório'"
-                        >
-                        <button class="btn btn-primary" type="submit">Pesquisar</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-        <div
-            class="alert alert-warning alert-dismissible fade show"
-            role="alert"
-            th:style="${certificatesUpdated ? 'display:none' : 'display:block'}"
+    <div th:replace="/registry-office/header"></div>
+    <div
+        class="alert alert-warning alert-dismissible fade show"
+        role="alert"
+        th:style="${certificatesUpdated ? 'display:none' : 'display:block'}"
+    >
+        <strong>Atenção!</strong> Atualize as certidões para cadastrar um novo cartório.
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <div id="loadingCertificates" class="float-right" style="display: none;">
+        <div class="spinner-grow text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+        <span>Carregando certidões... Por favor aguarde...</span>
+    </div>
+    <div style="margin-top: 10px;">
+        <a
+            href="/registry-office/new-registry-office"
+            th:style="${certificatesUpdated ? '' : 'display:none'}"
         >
-            <strong>Atenção!</strong> Atualize as certidões para cadastrar um novo cartório.
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-        <div id="loadingCertificates" class="float-right" style="display: none;">
-            <div class="spinner-grow text-primary" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
-            <span>Carregando certidões... Por favor aguarde...</span>
-        </div>
-        <div style="margin-top: 10px;">
-            <a
-                href="/registry-office/new-registry-office"
-                th:style="${certificatesUpdated ? '' : 'display:none'}"
+            <button class="btn btn-success" type="button">Novo</button>
+        </a>
+        <a href="/registry-office/update-certificates">
+            <button
+                class="btn btn-secondary"
+                type="button"
+                data-bs-toggle="tooltip" data-bs-placement="top" title="Busca certidões na API Docket"
+                onclick="loadingCertificates()"
             >
-                <button class="btn btn-success" type="button">Novo</button>
-            </a>
-            <a href="/registry-office/update-certificates">
-                <button
-                    class="btn btn-secondary"
-                    type="button"
-                    data-bs-toggle="tooltip" data-bs-placement="top" title="Busca certidões na API Docket"
-                    onclick="loadingCertificates()"
-                >
-                    Atualizar Certidões
-                </button>
-            </a>
+                Atualizar Certidões
+            </button>
+        </a>
 
-            <table class="table table-hover">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Endereço</th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="registryOffice : ${allRegistryOffices}">
-                    <th scope="row" th:text="${registryOffice.id}"></th>
-                    <td th:text="${registryOffice.name}"></td>
-                    <td th:text="${registryOffice.address}"></td>
-                    <td>
-                        <a th:href="@{/registry-office/edit/} + ${registryOffice.id}">
-                            <button class="btn btn-primary" type="button">Editar</button>
-                        </a>
-                        <button th:id="${registryOffice.id}"
-                                class="btn btn-danger"
-                                type="submit"
-                                data-toggle="modal"
-                                data-target="#deleteRegistryOffice"
-                                onclick="confirmRegistryOfficeDelete(this.id)"
-                        >
-                            Excluir
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Endereço</th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="registryOffice : ${allRegistryOffices}">
+                <th scope="row" th:text="${registryOffice.id}"></th>
+                <td th:text="${registryOffice.name}"></td>
+                <td th:text="${registryOffice.address}"></td>
+                <td>
+                    <a th:href="@{/registry-office/edit/} + ${registryOffice.id}">
+                        <button class="btn btn-primary" type="button">Editar</button>
+                    </a>
+                    <button th:id="${registryOffice.id}"
+                            class="btn btn-danger"
+                            type="submit"
+                            data-toggle="modal"
+                            data-target="#deleteRegistryOffice"
+                            onclick="confirmRegistryOfficeDelete(this.id)"
+                    >
+                        Excluir
+                    </button>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <!-- Modal - Excluir Cartório -->
+        <div class="modal fade" id="deleteRegistryOffice" tabindex="-1" role="dialog" aria-labelledby="deleteRegistryOfficeLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="deleteRegistryOfficeLabel">Excluir Cartório</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
                         </button>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <!-- Modal - Excluir Cartório -->
-            <div class="modal fade" id="deleteRegistryOffice" tabindex="-1" role="dialog" aria-labelledby="deleteRegistryOfficeLabel" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="deleteRegistryOfficeLabel">Excluir Cartório</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Tem certeza que deseja excluir este registro?</p>
-                        </div>
-                        <div class="modal-footer">
-                            <form id="confirmRegistryOfficeDelete" action="/registry-office/delete/{registryOfficeIdToDelete}" th:method="delete">
-                                <button type="submit" class="btn btn-primary">Confirmar</button>
-                            </form>
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                        </div>
+                    </div>
+                    <div class="modal-body">
+                        <p>Tem certeza que deseja excluir este registro?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <form id="confirmRegistryOfficeDelete" action="/registry-office/delete/{registryOfficeIdToDelete}" th:method="delete">
+                            <button type="submit" class="btn btn-primary">Confirmar</button>
+                        </form>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
                     </div>
                 </div>
             </div>
